# tree-sitter-l1

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  empty-main.txt  flake.nix  go.mod  grammar.js  log.html  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-l1.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_l1/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterL1/: l1.h
bindings/swift/TreeSitterL1Tests/: TreeSitterL1Tests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: arithmetic-with-parentheses.txt  block-comment-in-comment.txt  dead-code-after-return.txt  empty-main.txt  many_assignments.txt  missing_equal_sign.txt  multiplication-precedence.txt  one-plus-one.txt  simple_main.txt
