[package]
name = "tree-sitter-l1"
description = "Tree sitter parser for the L1 language for the compiler lab of KIT."
version = "0.1.0"
authors = ["TornaxO7 <tornax@pm.me>"]
license = "GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "l1"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tornaxo7/tree-sitter-l1"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
