[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-l1"
description = "Tree sitter parser for the L1 language for the compiler lab of KIT."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "l1"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "TornaxO7", email = "tornax@pm.me" }]
requires-python = ">=3.10"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tornaxo7/tree-sitter-l1"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
